gh pages install and configure

--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "game-of-life",
-  "private": true,
+  "homepage": "http://shifas05.github.io/game-of-life/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
